@@ -1,3 +1,9 @@
+2019-05-08  Akira Kakuto  <kakuto@w32tex.org>
+
+	* texmfmp.h: Define a new function find_input_file(integer s).
+	A report in tex-k list:
+	https://tug.org/pipermail/tex-k/2019-May/003014.html
+
 2019-04-07  Karl Berry  <karl@freefriends.org>
 
 	* TeX Live 2019.
